# binobject

./: .editorconfig  .gitignore  .gitmodules  .npmignore  CMakeLists.txt  LICENSE  Makefile  README.md  binding.gyp  index.js  package-lock.json  package.json  tsconfig.json
browser/: binary-object.ts  constants.ts  custom-types.ts  index.ts  object-decoder.ts  object-encoder.ts
src/: README.md  constants.ts  custom-type.cpp  custom-type.h  decoder.c  decoder.h  encoder.c  encoder.h  ieee754.c  ieee754.h  node-binobject.cc  node-binobject.h  node-decoder.cc  node-decoder.h  node-encoder.cc  node-encoder.h  object-decoder.ts  object-encoder.ts
test/: test.c  test.json  test.ts  test_bindings.ts
